# ---Telegram---------

./: .cursorrules  .gitignore  README.md  config.ini  data.db  gui_main.py  imported_accounts.json  mission_accounts.json  pyproject.toml  request_history copy.json  request_history.json  request_history.json.bak  requirements.txt  simulate_conversation_list.py  simulate_mission_account.py  simulate_mission_add.py  simulate_mission_sub.py  simulate_requests.py  simulate_update_data.py
docs/: 使用说明.md
modules/: __init__.py  config_tab.py  database.py  mission_account.py  mission_account_ui.py  mission_add_ui.py  styles.qss
results/: mission_account_1599857.json  (+15 more)
results copy/: mission_11311521.json  mission_11311523.json  mission_11311524.json  mission_11311525.json  mission_11311526.json  mission_11311528.json  mission_11311531.json  mission_11311541.json  mission_11311549.json  mission_11311550.json  mission_11311553.json  mission_11311555.json  mission_11311557.json  mission_11311562.json  mission_11312024.json  mission_11312026.json  mission_11312060.json  mission_11312066.json  mission_11312067.json  mission_11312098.json  mission_11312105.json  mission_11312108.json  mission_account_1599857.json  mission_account_1599858.json  mission_account_1599859.json  mission_account_1599860.json  mission_account_1599861.json  mission_account_1599862.json  mission_account_1599863.json  mission_account_1599864.json  mission_account_1599865.json  mission_account_1599866.json  mission_account_1599867.json  mission_account_1599868.json  mission_account_1599869.json
(+3 files in other folders)
