[tool.poetry]
name = "tgcloud-request-simulator"
version = "0.1.0"
description = "TG Cloud 请求模拟工具"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
urllib3 = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 